<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodTruckTracker</string>
    <string name="valider">Valider</string>
    <string name="identifiant">Saisir identifiant</string>
    <string name="motDePasse">Saisir mot de passe</string>
    <string name="creer">Créer son compte</string>
    <string name="verification">Resaisir mot de passe</string>
    <string name="mail">Saisir adresse email</string>
    <string name="client">Compte client</string>
    <string name="vendeur">Compte vendeur</string>
    <string name="action_settings">Settings</string>
    <string name="connexion">Connexion</string>
    <string name="automatique">Connexion automatique</string>
    <string name="localisation">Poster une localisation</string>
    <string name="modifPage">Modifier la page</string>
    <string name="deconnection">Se déconnecter</string>
    <string name="select">Ajouter foodTruck</string>
    <string name="login">identifiant</string>
    <string name="titre">Titre</string>
    <string name="envoyer">Envoyer localisation</string>
    <string name="oublier">Mot de passe oublié?</string>
    <string name="nouveau">Saisir nouveau mot de passe</string>
    <string name="verifNouveau">Resaisir nouveau mot de passe</string>
    <string name="erreurVide">Adresse email et mot de passe sont obligatoires</string>
    <string name="erreurVide2">Identifiant, adresse email et mot de passe sont obligatoires</string>
    <string name="erreurVide3">adresse email et mot de passe sont obligatoires</string>
    <string name="erreurInconnu">L adresse email et/ou mot de passe sont incorrects</string>
    <string name="erreurMdp">Les mots de passes sont différents</string>
    <string name="erreurMailFaux">L adresse mail nest pas valide</string>
    <string name="erreurValMdp">Mot de passe comportant au minimum 6 caractères, 1 majuscule et 1 chiffre</string>
    <string name="erreurIdentif">Identifiant trop court minimum 4 caractères</string>
    <string name="erreurMail">Adresse email non conforme</string>
    <string name="validerMdp">Mot de passe modifié</string>
    <string name="erreurTelephone">Le numero de telephone non conforme</string>
    <string name="description">Description:</string>
    <string name="supprimer">Supprimer marker</string>
    <string name="promotion">Promotions:</string>
    <string name="telephone">Telephone:</string>
    <string name="ajouter">Ajouter marker</string>
    <string name="menus">Menus:</string>
    <string name="choisir">Choisir un logo</string>
    <string name="mapKey">AIzaSyBFtcmf2HNZA6Z_eLwtFscgLj09uueH1ZQ</string>
    <string name="suspendu">Services de localisation suspendus, veuillez vous reconnecté</string>
    <string name="echec">Connexion des services de localisation échoué avec le code </string>
    <string name="connecte">Services de localisation connectés</string>
    <string name="modification">Les modifications ont bien été enregistrées</string>
    <string name="selection">Marker a supprimer</string>
    <string name="markerIncorrect">Marker inexistant</string>
    <string name="modifier">Modifier marker</string>
    <string name="ancien">Titre marker a modifier</string>
    <string name="supp">Supprimer marker</string>
    <string name="modi">Modifier marker</string>
    <string name="choix">Supprimer / Modifier</string>
    <string name="changement">Le titre du marker a bien ete modifier</string>
    <string name="identique">Le titre du marker existe deja</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="defaut">Marker par defaut</string>
    <string name="LatIncorrect">Latitude et/ou Longitude incorrect</string>
    <string name="food">Selection des foodTrucks</string>
    <string name="distance">Selection du rayon distance désiré:</string>
    <string name="jour">Jour de la semaine et horaire (ex: lundi 12.30-14):</string>
    <string name="detail">Voir détail: cliquez</string>
    <string name="here"><u>ici</u></string>

</resources>
