<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <EditText
        android:id="@+id/identifiantCompte"
        android:text="@string/identifiant"
        android:textColor="#A4A4A4"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <EditText
        android:id="@+id/mailCompte"
        android:text="@string/mail"
        android:textColor="#A4A4A4"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <EditText
        android:id="@+id/motDePasseCompte"
        android:text="@string/motDePasse"
        android:textColor="#A4A4A4"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <EditText
        android:id="@+id/verificationCompte"
        android:text="@string/verification"
        android:textColor="#A4A4A4"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <Button
        android:id="@+id/buttonValiderCompte"
        android:text="@string/valider"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <TextView
        android:id="@+id/retourCompte"
        android:text="@string/retour"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

</LinearLayout>