<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <EditText
        android:id="@+id/identifiant"
        android:text="@string/mail"
        android:textColor="#A4A4A4"
        android:background="#FFFFFF"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <EditText
        android:id="@+id/motDePasse"
        android:text="@string/motDePasse"
        android:textColor="#A4A4A4"
        android:background="#FFFFFF"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <CheckBox
            android:id="@+id/auto"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="0px" />

        <TextView
            android:text="@string/automatique"
            android:layout_weight="3"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="0px" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonConnexion"
        android:text="@string/connexion"
        android:gravity="center"
        android:background="#31B404"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <TextView
        android:id="@+id/buttonCreer"
        android:text="@string/creer"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <TextView
        android:id="@+id/oublier"
        android:text="@string/oublier"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="145dp" />

</LinearLayout>
