<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <EditText
        android:id="@+id/mailOublier"
        android:text="@string/mail"
        android:textColor="#A4A4A4"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <EditText
        android:id="@+id/nouveauMdp"
        android:text="@string/nouveau"
        android:textColor="#A4A4A4"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <EditText
        android:id="@+id/verifNouveauMdp"
        android:text="@string/verifNouveau"
        android:textColor="#A4A4A4"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <Button
        android:id="@+id/validerNouveauMdp"
        android:text="@string/valider"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <TextView
        android:id="@+id/retourMdp"
        android:text="@string/retour"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

</LinearLayout>