<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:id="@+id/identifiantVendeur"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:gravity="left"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0px" />

        <TextView
            android:id="@+id/deconnection"
            android:text="@string/deconnection"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_width="0px" />

    </LinearLayout>

    <Button
        android:id="@+id/geolocalisation"
        android:text="@string/localisation"
        android:layout_marginTop="100px"
        android:background="#31B404"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <Button
        android:id="@+id/modifPage"
        android:text="@string/modifPage"
        android:background="#31B404"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

</LinearLayout>